--- a/index.html
+++ b/index.html
@@ -22,8 +22,67 @@
 
 	<section>
 		<!--partie Trouvez votre hébergement-->
-	</section>
+		<H1>Trouvez votre hébergement pour des vacances de rêve</H1>
+		<p>En plein centre ville ou en pleine nature</p>
+		
+		<div id="rechercher">
+			<div id="iconelocalisation">
+				<i class="fa fa-map-marker fa" aria-hidden="true"></i>
+			</div>
+			<form method="post" action="adresse.php">
+				<input type="search" name="search" id="search" size="25" placeholder="Marseille, France" class="saisirecherche" />
+        		<input type="submit" name="submit" id="submit" value="Rechercher" class="boutonrechercher"/>
+        	</form>
+		</div>
+</br><!--partie Trouvez votre hébergement-->
+		<div id="bloc_filtre">	
+			<p> Filtres
+				<div id="eco">
+					<div class="arrondiOuvre"></div>
+					<div class="icone">
+						<i class="fa fa-money" aria-hidden="true"></i>
+					</div>
+					<div class="titreIcone">économie</div>
+					<div class="arrondiferme"></div>
 
+				</div>
+				<div id="famille">
+					<div class="icone">
+					<div class="arrondiOuvre"></div>
+						<i class="fa fa-child" aria-hidden="true"></i>
+					</div>
+					<div class="titreIcone">familial</div>
+					<div class="arrondiferme"></div>
+				</div>
+				<div id="romantique">
+					<div class="arrondiOuvre"></div>
+					<div class="icone">
+						<i class="fa fa-heart" aria-hidden="true"></i>
+					</div>
+					<div class="titreIcone">romantique</div>
+					<div class="arrondiferme"></div>
+				</div>
+
+				<div id="animaux">
+					<div class="arrondiOuvre"></div>
+					<div class="icone">
+						<i class="fas fa-dog"></i>
+					</div>
+					<div class="titreIcone"><span>Animaux&nbsp;autorisés</span></div>
+					<div class="arrondiferme"></div>
+				</div>
+			</p>
+		</div>
+		<p>
+			<div id="nbdispo">
+				<div id="iconeInfo">
+					<i class="fa fa-info fa-xs" aria-hidden="true"></i>
+				</div>
+			<span>Plus de 500 logements sont disponibles dans cette ville</span>
+			</div>
+		</p>
+	
+	</section>
 
 	<section>
 		<!--partie avec photos hébergements-->
@@ -64,6 +123,8 @@
 	    </div>
 	</footer>
 
+	<script src="https://use.fontawesome.com/17f21b793c.js"></script>
+	<script src="https://kit.fontawesome.com/717dc6ad61.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
