optimisé partie filtre + verif W3C

--- a/index.html
+++ b/index.html
@@ -15,22 +15,20 @@
 			<div>
 				<img src="images/logo/reservia.svg" alt="logo reservia" class="logo" />
 			</div>
-			<div id="bloc_btn">
-				<div id="btn">
-					<nav>
-						<ul>
-							<li><a href="#hebergements">Hébergements</a></li>
-							<li><a href="#Activites">Activités</a></li>
-						</ul>
-					</nav>
-				</div>
+			<div id="btn">
+				<nav>
+					<ul>
+						<li><a href="#hebergements">Hébergements</a></li>
+						<li><a href="#Activites">Activités</a></li>
+					</ul>
+				</nav>
 			</div>
 			<div>
 				<a href="x.html" target="_blank" id="btnInscrire">S'inscrire</a>
 			</div>
 		</header>
 	
-		<section><!--partie Trouvez votre hébergement-->
+		<section> 	<!--partie Trouvez votre hébergement-->
 			<H1>Trouvez votre hébergement pour des vacances de rêve</H1>
 			<p>En plein centre ville ou en pleine nature</p>
 			
@@ -38,112 +36,102 @@
 				<div id="iconelocalisation">
 					<i class="fa fa-map-marker fa" aria-hidden="true"></i>
 				</div>
-				<div>
-					<form method="post" action="adresse.php">
-						<input type="search" name="search" id="search" size="25" placeholder="Marseille, France" class="saisirecherche" />
-				</div>
-		        <div>
-	        			<input type="submit" name="submit" id="submit" value="Rechercher" class="boutonrechercher_web"/>
-	        	</div>
-	        	<div>
-	        			<button type="submit" name="submit" id="submit" value="Rechercher" class="boutonrechercher_mobile"><i class="fas fa-search" aria-hidden="true"></i></button>
-	        	</div>
-	        		</form>
+					<div>
+						<form method="post" action="adresse.php">
+							<input type="search" name="search" id="search" size="25" placeholder="Marseille, France" class="saisirecherche"/>
+					</div>
+			        <div>
+		        			<input type="submit" name="submit" id="submit" value="Rechercher" class="boutonrechercher_web"/>
+		        	</div>
+		        	<div>
+		        			<button type="submit" name="submit_mobile" id="submit_mobile" value="Rechercher" class="boutonrechercher_mobile"><i class="fas fa-search" aria-hidden="true"></i></button>
+		        	</div>
+	        	</form>
         	</div>   
-			
-
-</br><!--partie Trouvez votre hébergement-->
+<br>
+					<!--partie Trouvez votre hébergement-->
 			<div id="bloc_filtre">	
 				<div id="titre">Filtres </div>
 				<div id="filtres">
 					<div id="eco">
-						<div class="arrondiOuvre"></div>
 						<div class="icone">
 							<i class="fa fa-money" aria-hidden="true"></i>
 						</div>
-						<div class="titreIcone">économie</div>
-						<div class="arrondiferme"></div>
-
+						<div class="titreIcone">économique</div>
 					</div>
 					<div id="famille">
 						<div class="icone">
-						<div class="arrondiOuvre"></div>
 							<i class="fa fa-child" aria-hidden="true"></i>
 						</div>
 						<div class="titreIcone">familial</div>
-						<div class="arrondiferme"></div>
 					</div>
 					<div id="romantique">
-						<div class="arrondiOuvre"></div>
 						<div class="icone">
 							<i class="fa fa-heart" aria-hidden="true"></i>
 						</div>
 						<div class="titreIcone">romantique</div>
-						<div class="arrondiferme"></div>
 					</div>
-
 					<div id="animaux">
-						<div class="arrondiOuvre"></div>
 						<div class="icone">
 							<i class="fas fa-dog"></i>
 						</div>
 						<div class="titreIcone"><span>Animaux&nbsp;autorisés</span></div>
-						<div class="arrondiferme"></div>
 					</div>
 				</div>
 			</div>
 			
-			<p>
+			<p></p>
 				<div id="nbdispo">
 					<div id="iconeInfo">
 						<i class="fa fa-info fa-xs" aria-hidden="true"></i>
 					</div>
 				<span>Plus de 500 logements sont disponibles dans cette ville</span>
 				</div>
-			</p>
 		</section>
 
-	<section>
-		<!--partie avec photos hébergements-->
-		<h2 id="Hebergement">Hébergement à Marseille </h2>
-		<aside>
-			<!--partie les plus populaires-->
-		</aside>
-	</section>
+		<section>
+					<!--partie avec photos hébergements-->
+			<h2 id="Hebergement">Hébergement à Marseille </h2>
+			<aside>
+					<!--partie les plus populaires-->
+			</aside>
+		</section>
 
 
-	<section>
-		<!--partie activités à Marseille-->
-		<h2 id="Activites">Activités à Marseille </h2>
-	</section>
+		<section>
+					<!--partie activités à Marseille-->
+			<h2 id="Activites">Activités à Marseille </h2>
+		</section>
 
 
-	<footer>
-		<div id="global_footer">
-			<div id="A_propos" />
-	           	<h3>A propos</h3>
-	           		<p><a href="x.html"> Fonctionnement du site</a></p>
-	    	       	<p><a href="x.html"> Condition générales de vente</a></p>
-	        	   	<p><a href="x.html"> Données et condidentialité</a></p>
-	        </div>
+		<footer>
+			<div id="global_footer">
+				<div id="A_propos">
+		           	<h3>A propos</h3>
+		           		<p><a href="x.html"> Fonctionnement du site</a></p>
+		    	       	<p><a href="x.html"> Condition générales de vente</a></p>
+		        	   	<p><a href="x.html"> Données et condidentialité</a></p>
+		        </div>
 
-	        <div id="Nos_hébergements">
-	           	<h3>Nos hébergements</h3>       			
-		           	<p><a href="x.html"> Charte qualité</a></p>
-	    	       	<p><a href="mailto:Olivier.vermesse74@gmail.com" title= "Soumettre votre hotel" target="_blank"> Soumettre votre hôtel</a></p>
-	        </div>
+		        <div id="Nos_hébergements">
+		           	<h3>Nos hébergements</h3>       			
+			           	<p><a href="x.html"> Charte qualité</a></p>
+		    	       	<p><a href="mailto:Olivier.vermesse74@gmail.com" title= "Soumettre votre hotel" target="_blank"> Soumettre votre hôtel</a></p>
+		        </div>
 
-			<div id="Assistance">
-	           	<h3>Assistance</h3>       			
-		           	<p><a href="x.html"> Centre d'aide</a></p>
-	    	       	<p><a href="mailto:Olivier.vermesse74@gmail.com" title= "Nous contacter" target="_blank"> Nous contacter</a></p>
-	    	</div>
-	    </div>
-	</footer>
-
+				<div id="Assistance">
+		           	<h3>Assistance</h3>       			
+			           	<p><a href="x.html"> Centre d'aide</a></p>
+		    	       	<p><a href="mailto:Olivier.vermesse74@gmail.com" title= "Nous contacter" target="_blank"> Nous contacter</a></p>
+		    	</div>
+		    </div>
+		</footer>
+	
+	</div>
+	
 	<script src="https://use.fontawesome.com/17f21b793c.js"></script>
 	<script src="https://kit.fontawesome.com/717dc6ad61.js" crossorigin="anonymous"></script>
-</div>
+
 </body>
 
 </html>
