--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="fr">
 
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
@@ -52,7 +51,7 @@
 <br>
 					<!--partie Trouvez votre hébergement-->
 			<div id="bloc_filtre">	
-				<div id="titre">Filtres </div>
+				<h3>Filtres</h3>
 				<div id="filtres">
 					<div id="eco">
 						<div class="icone">
@@ -101,9 +100,48 @@
 
 		<section>
 					<!--partie activités à Marseille-->
-			<h2 id="Activites">Activités à Marseille </h2>
-		</section>
 
+
+				
+
+
+			<div id="bloc_activity">
+				<h2>Activités à Marseille </h2>
+				<div id="activity">
+					<div id="port">
+						<img src="images/activites/vieux_port.jpg" alt="vieux_port" title="Vieux port" />
+						<div id="port_desc"> Vieux Port
+						</div>
+					</div>
+					<div id="fort">
+						<img src="images/activites/fort_pomegues.jpg" alt="fort_pomegues" title="fort de Pomegues" 	/>
+						<div id="fort_desc"> Fort de Pomègues
+						</div>
+					</div>
+					 <div id="iles">
+						<img src="images/activites/ile_frioul.jpg" alt="ile_frioul" title="Iles du Frioul" />
+						<div id="iles_desc"> Îles du Frioul
+						</div>
+					</div>
+					<div id="calanques">
+						<img src="images/activites/parc_calanques.jpg" alt="parc_calanques" title="Parc des Calanques" />
+						<div id="calanques_desc"> Parc National des Calanques
+						</div>
+					</div>
+					<div id="garde">
+						<img src="images/activites/notre_dame_garde.jpg" alt="notre_dame_garde" title="Notre dame de la Garde" />
+						<div id="calanques_desc"> Notre-Dame-de-la-Garde
+						</div>
+					</div>
+					<div id="longchamp">
+						<img src="images/activites/longchamp.jpg" alt="parc_longchamp" title="Parc Longchamp" />
+						<div id="calanques_desc"> Parc Longchamp
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+<br>
 
 		<footer>
 			<div id="global_footer">
