correction affichage icone recherche partie search

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							<div class="fromprice"> Nuit à partir de 128 <span>€</span>
 							</div>
 						</div>
-						<div class="stars5">
+						<div class="stars">
 							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 						</div>
 					</div>
@@ -127,7 +127,7 @@
 							<div class="fromprice"> Nuit à partir de 71 <span>€</span>
 							</div>
 						</div>
-						<div class="stars4">
+						<div class="stars">
 							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span><i class="fas fa-star"></i></span>
 						</div>
 					</div>
@@ -144,7 +144,7 @@
 							<div class="fromprice"> Nuit à partir de 68 <span>€</span>
 							</div>
 						</div>
-						<div class="stars4">
+						<div class="stars">
 							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span><i class="fas fa-star"></i></span>
 						</div>
 					</div>
