--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 		<header id="bloc_header">
 			<div>
-				<img src="images/logo/reservia.png" alt="logo reservia" class="logo" />
+				<img src="images/logo/reservia.svg" alt="logo reservia" class="logo" />
 			</div>
 			<div id="btn">
 				<nav>
