--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		
 		<header id="bloc_header">
 			<div>
-				<img src="images/logo/reservia.svg" alt="logo reservia" class="logo" />
+				<!-- <img src="images/logo/reservia.svg" alt="logo reservia" class="logo1" /> -->
+				<img src="https://rawgithub.com/OlivierVermesse/OlivierVermesse_2_26022021/blob/DEV/images/logo/Reservia.svg" alt="logo reservia" class="logo" />
 			</div>
 			<div id="btn">
 				<nav>
@@ -323,7 +324,7 @@
 		</footer>
 	</div>
 	
-	
+
 	<script src="https://use.fontawesome.com/17f21b793c.js"></script>
 	<script src="https://kit.fontawesome.com/717dc6ad61.js" crossorigin="anonymous"></script>
 </body>
