modif url github logo

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
 	<div id="bloc_page">
-		
+
 		<header id="bloc_header">
 			<div>
 				<!-- <img src="images/logo/reservia.svg" alt="logo reservia" class="logo1" /> -->
-				<img src="https://rawgithub.com/OlivierVermesse/OlivierVermesse_2_26022021/blob/DEV/images/logo/Reservia.svg" alt="logo reservia" class="logo" />
+				<img src="https://raw.github.com/OlivierVermesse/OlivierVermesse_2_26022021/DEV/images/logo/Reservia.svg" alt="logo reservia" class="logo" />
 			</div>
 			<div id="btn">
 				<nav>
