finale valide mentor

--- a/index.html
+++ b/index.html
@@ -298,30 +298,30 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<footer>
-			<div id="global_footer">
-				<div id="A_propos">
-		           	<h3>A propos</h3>
-		           		<p><a href="x.html"> Fonctionnement du site</a></p>
-		    	       	<p><a href="x.html"> Condition générales de vente</a></p>
-		        	   	<p><a href="x.html"> Données et condidentialité</a></p>
-		        </div>
-
-		        <div id="Nos_hébergements">
-		           	<h3>Nos hébergements</h3>       			
-			           	<p><a href="x.html"> Charte qualité</a></p>
-		    	       	<p><a href="mailto:Olivier.vermesse74@gmail.com" title= "Soumettre votre hotel" target="_blank"> Soumettre votre hôtel</a></p>
-		        </div>
-
-				<div id="Assistance">
-		           	<h3>Assistance</h3>       			
-			           	<p><a href="x.html"> Centre d'aide</a></p>
-		    	       	<p><a href="mailto:Olivier.vermesse74@gmail.com" title= "Nous contacter" target="_blank"> Nous contacter</a></p>
-		    	</div>
-		    </div>
-		</footer>
 	</div>
+	<footer>
+		<div id="global_footer">
+			<div id="apropos">
+	           	<h3>A propos</h3>
+	           		<p><a href="x.html"> Fonctionnement du site</a></p>
+	    	       	<p><a href="x.html"> Condition générales de vente</a></p>
+	        	   	<p><a href="x.html"> Données et condidentialité</a></p>
+	        </div>
+
+	        <div id="noshebergements">
+	           	<h3>Nos hébergements</h3>       			
+		           	<p><a href="x.html"> Charte qualité</a></p>
+	    	       	<p><a href="mailto:Olivier.vermesse74@gmail.com" title= "Soumettre votre hotel" target="_blank"> Soumettre votre hôtel</a></p>
+	        </div>
+
+			<div id="assistance">
+	           	<h3>Assistance</h3>       			
+		           	<p><a href="x.html"> Centre d'aide</a></p>
+	    	       	<p><a href="mailto:Olivier.vermesse74@gmail.com" title= "Nous contacter" target="_blank"> Nous contacter</a></p>
+	    	</div>
+	    </div>
+	</footer>
+	
 	
 
 	<script src="https://use.fontawesome.com/17f21b793c.js"></script>
