--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
-  <link rel="stylesheet" href="style_p2.css">
+  <link rel="stylesheet" href="style.css">
   <title>OlivierVermesse_2_26022021</title>
 </head>
 
@@ -28,8 +28,9 @@
 			</div>
 		</header>
 	
-		<section> 	<!--partie Trouvez votre hébergement-->
-			<H1>Trouvez votre hébergement pour des vacances de rêve</H1>
+		<section>
+		<div id="bloc_search"> 	<!--partie Trouvez votre hébergement-->
+			<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
 			<p>En plein centre ville ou en pleine nature</p>
 			
 			<div id="rechercher">   <!--partie RECHERCHE de Trouvez votre hébergement-->
@@ -83,12 +84,13 @@
 				<span>Plus de 500 logements sont disponibles dans cette ville</span>
 				</div>
 				<br>
+		</div>
 		</section>
 
 		<section id="section1">		<!--partie hébergements & populaires-->
 			<div id="bloc_hebergements">
 				<div id="bloc_titre_hebergements">
-					<h2> Hébergement à Marseille </h2>
+					<h3> Hébergement à Marseille </h3>
 				</div>
 				<div id="hotels_hebergements">
 					<div id="htlm_cannebiere">
@@ -201,7 +203,7 @@
 
 			<aside id="bloc_populaires">
 				<div id="bloc_titre_populaires">
-					<h2>Les plus populaires </h2>
+					<h3>Les plus populaires </h3>
 					<i class="fas fa-chart-line fa-2x"></i>
 				</div>
 				<div id="hotels_pop">
@@ -263,7 +265,7 @@
 
 		<section id="section2">		<!--partie Activités à Marseille-->
 			<div id="bloc_activity">
-				<h2>Activités à Marseille </h2>
+				<h3>Activités à Marseille </h3>
 				<div id="activity">
 					<div id="port">
 						<img src="images/activites/vieux_port.jpg" alt="vieux_port" title="Vieux port" />
@@ -299,6 +301,7 @@
 			</div>
 		</section>
 	</div>
+
 	<footer>
 		<div id="global_footer">
 			<div id="apropos">
